<resources>
    <string name="app_name">The Angkringan</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="latest_recipe_title">Latest Recipe</string>
    <string name="category_recipe_title">Category Recipe</string>
    <string name="recipe_nav_title">Recipe</string>
    <string name="event_nav_title">Events</string>
    <string name="account_nav_title">Account</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="location_title">Location</string>
    <string name="event_and_promo_title">Event and Promo</string>
    <string name="welcometext">Welcome To The Angkringan</string>
    <string name="aboutus1">The Angkringan was established in 2019. The Angkringan is a multiplatform food-focused on digital media that discusses the recipes of traditional archipelago cuisine. Taking the tag #LestarikanResepNusantara, The Angkringan
always presenting an inspiring and appetizing archipelago cuisine recipe content format.</string>
    <string name="aboutus2">Through this mobile application, it is expected to make it easier for people who want to cook archipelago cuisine and do not need to bother anymore.
We present all recipes from 34 provinces in Indonesia. What are you waiting for, lets cook and taste the typical dishes of our beloved Indonesian archipelago.</string>
    <string name="aboutus3">#LestarikanResepNusantara</string>
    <string name="help1">1.	Bagaimana cara mendaftar akun di The Angkringan App?\n
a.	Masuk ke halaman “Account”\n
b.	Isi informasi yang dibutuhkan untuk membuat akun di The Angkringan\n
c.	Tekan tombol “Register”\n
d.	Selamat kamu sudah berhasil membuat akun di The Angkringan App\n
</string>
    <string name="help2">2.	Bagaimana cara membuat resep di The Angkringan App?\n
a.	Masuk ke halaman “Account”\n
b.	Tekan tombol “Buat Resep” \n
c.	Isi informasi yang tersedia mengenai resep, dan jangan lupa untuk mengisi informasi sejelas mungkin dan kualitas foto sebaik mungkin.\n
d.	Tekan tombol “Upload Resep”\n
e.	Resep kreasimu akan masuk tahap kurasi dari chef internal kami, jika lolos maka resep kreasimu akan terpublish \n
</string>
    <string name="help3">3.	Bagaimana cara menambahkan resep yang saya suka menjadi resep favorit?\n
a.	Masuk ke halaman detail resep\n
b.	Tekan tombol “Favorit”\n
c.	Secara otomatis, resep tersebut akan masuk kedalam list favorit di dalam halaman “Akun” milikmu\n
</string>
    <string name="help4">4.	Bagaimana cara memberikan komentar pada resep yang ada di The Angkringan App?\n
a.	Masuk ke halaman detail resep\n
b.	Lalu di section paling bawah, kamu bisa menuliskan komentar dalam bentuk kalimat \n
c.	Tekan tombol “Kirim”\n
d.	Komentar milikmu akan otomatis muncul di section “Komentar”\n
</string>
    <string name="help5">5.	Dimana saya dapat bertanya lebih lanjut mengenai The Angkringan Apps?\n
a.	Silahkan hubungi kami via email di: hello@theangkringan.harmonydshine.web.id\n
</string>
    <string name="dummy_description">I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</string>
    <string name="dummy_content">I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_title">Account</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_text">or click here to Sign up?</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="email_username">Enter your username or Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="placeholder_fullname">Enter Your Fullname</string>
    <string name="placeholder_phone">Enter your phone</string>
    <string name="placeholder_location">Enter your address</string>
    <string name="placeholder_password">Enter your password</string>
    <string name="sub_header_signup">Register your credentials below</string>
    <string name="placeholder_email">Enter your email</string>
    <string name="sub_header_login">Enter your credentials below</string>
    <string name="category_recipe">Category recipe</string>
    <string name="rating_value">4.5</string>
    <string name="btn_sign_in_text">Already have an account? Sign in Now</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="text_gender">Gender</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="dummy_name">Wawan Rahmawan</string>
    <string name="dummy_email">wawan_rahmawah@gmail.com</string>
    <string name="dummy_recipe_title">Recipe</string>
    <string name="dummy_recipe_fav">Favorite</string>
    <string name="revision_recipe">Rejected Recipe</string>
    <string name="inprogress_recipe">Waiting Approval Recipe</string>
    <string name="approval_recipe">Approval Recipe</string>
    <string name="add_recipe">Add recipe</string>
    <string name="tv_recipe_title">Recipe title</string>
    <string name="tv_description">Description</string>
    <string name="tv_ingridients">Ingridients</string>
    <string name="how_to_cook">How to cook</string>
    <string name="input_the_detail">input the detail</string>
    <string name="del_btn">Del</string>
    <string name="input_category_recipe">Input Category recipe</string>
    <string name="input_recipe_title">Input recipe title</string>
    <string name="input_link_video">Input Link Video</string>
    <string name="link_video">Link Video</string>
    <string name="input_province">Input Province</string>
    <string name="input_city">Input City</string>
    <string name="notes">Notes</string>
    <string name="input_notes">Input Notes</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="gender_title">Gender</string>
    <string name="phone_number">Phone number</string>
    <string name="dummy_comment">Makanannya enak sekali</string>

    <string name="tab_my_recipe">My Recipe</string>
    <string name="tab_my_wishlist">My Wishlist</string>
    <string name="terms_and_conditions">Terms and Conditions ></string>
    <string name="about_us">About Us ></string>
    <string name="logout_the_angkringan">Logout The Angkringan</string>
    <string name="detail_makanan">detail makanan</string>
    <string name="update_account">Update</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="update_profile">Update Profile</string>
</resources>
