<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.theangkringan.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_event"
        android:name="com.example.theangkringan.ui.event.EventFragment"
        android:label="@string/event_and_promo_title"
        tools:layout="@layout/fragment_event_promo" />

    <fragment
        android:id="@+id/navigation_recipe"
        android:name="com.example.theangkringan.ui.recipes.RecipesFragment"
        android:label="@string/recipe_nav_title"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.theangkringan.ui.account.AccountFragment"
        android:label="@string/account_title"
        tools:layout="@layout/fragment_account" />
</navigation>